Add api and configuration modules
