# application/servicetemplate-domain/src/main/java/it/pdv/servicedomain/servicetemplate/domain/service/request/PurchaseOrderRequest.java
@@ -1,0 +1,8 @@
+package it.pdv.servicedomain.servicetemplate.domain.service.request;
+
+import lombok.Data;
+
+@Data
+public class PurchaseOrderRequest extends PurchaseOrderGetRequest {
+	private String customer;
+}
